# tiago_tutorials

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  package.xml  tiago_public-melodic.rosinstall  tiago_public-noetic.rosinstall  tiago_public.repos  tiago_public.rosinstall
cfg/: pcl.cfg
demo_motions/: CHANGELOG.rst  CMakeLists.txt  ReadMe.md  package.xml
demo_motions/launch/: motions.launch  run_alive.launch
demo_motions/resources/: custom_motions_steel.yaml  custom_motions_titanium.yaml
demo_motions/src/: run_loop_node.cpp
include/: pcl_segment.h  pcl_test.h
look_hand/: CHANGELOG.rst  CMakeLists.txt  package.xml
look_to_aruco_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
look_to_aruco_demo/launch/: look_to_aruco.launch.py
look_to_aruco_demo/src/: look_to_aruco.cpp
look_to_point/: CHANGELOG.rst  CMakeLists.txt  package.xml
look_to_point/src/: look_to_point.cpp
opencv/: CMakeLists.txt  package.xml
opencv/src/: track_sequential.cpp
opencv_tut/: CMakeLists.txt  ReadMe.md  package.xml
opencv_tut/launch/: keypoint_tutorial.launch  matching_tutorial.launch
opencv_tut/msg/: valueMatrix.msg
opencv_tut/resources/: gui_flann_matching.ui  gui_keypoints.ui
opencv_tut/scripts/: gui_find_keypoints.py  gui_flann_matching.py
opencv_tut/src/: corner_detection.cpp  find_keypoints.cpp  flann_matching.cpp  track_sequential.cpp
pcl_tiago_tutorials/: CMakeLists.txt  README.md  package.xml
pcl_tiago_tutorials/cfg/: pcl.cfg
pcl_tiago_tutorials/include/: pcl_segment.h
pcl_tiago_tutorials/launch/: pcl_segment.launch
pcl_tiago_tutorials/resources/rviz/: pcl_segment.rviz
pcl_tiago_tutorials/src/: pcl_segment.cpp  region_segment.cpp
play_with_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
play_with_sensors/scripts/: current_play.py  force_torque_play.py  image_play.py  imu_play.py  laser_play.py  rgbd_play.py
resources/rviz/: pcl_segment.rviz
run_motion/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt.user.995bb3c  package.xml
run_motion/scripts/: run_motion_python_node.py
run_motion/src/: run_motion_node.cpp
say_something/: CHANGELOG.rst  CMakeLists.txt  package.xml
say_something/scripts/: say.py
scripts/: look_hand.py
src/: look_to_point.cpp  pcl_segment.cpp  pcl_test.cpp
tiago_aruco_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_aruco_demo/config/: aruco_demo.rviz
tiago_aruco_demo/launch/: detector.launch
tiago_base_controller/: CMakeLists.txt  package.xml
tiago_base_controller/include/: TiagoBaseController.h
tiago_base_controller/src/: TiagoBaseController.cpp
tiago_gpt4/: CMakeLists.txt  package.xml
tiago_gpt4/launch/: breathing.launch  gpt4_service.launch
tiago_gpt4/script/: Showing_Events_Caleder.py  breathing.py  create_calendar.py  credentials.json  customized_gesture.py  def_actions.py  gpt4_server.py  gpt4_server_b.py  gpt_generation.py  gpt_generation_b.py  handover_snacks.py  home_position.py  lower_arm.py  strech_ball.py  text_to_speech_gpt4.py  token.pickle  unfold_arm.py  voice_recognition_server.py  voice_recognition_server_b.py
tiago_joint_controller/: CMakeLists.txt  package.xml
tiago_joint_controller/include/: TiagoJointController.h
tiago_joint_controller/src/: TiagoJointController.cpp
tiago_moveit_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_moveit_tutorial/config/: tiago_octomap_motions.yaml
tiago_moveit_tutorial/launch/: moveit.rviz  octomap_tiago.launch
tiago_moveit_tutorial/src/: plan_arm_torso_fk.cpp  plan_arm_torso_ik.cpp
tiago_opencv_tutorial/: CHANGELOG.rst  CMakeLists.txt  ReadMe.md  package.xml
tiago_opencv_tutorial/launch/: keypoint_tutorial.launch  matching_tutorial.launch
tiago_opencv_tutorial/resources/: gui_flann_matching.ui  gui_keypoints.ui
tiago_opencv_tutorial/scripts/: animate_ball.py  gui_find_keypoints.py  gui_flann_matching.py
tiago_opencv_tutorial/src/: corner_detection.cpp  features2d_factory.h  find_keypoints.cpp  flann_matching.cpp  track_sequential.cpp
tiago_pcl_tutorial/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pcl_tutorial/cfg/: region.cfg  segment.cfg
tiago_pcl_tutorial/config/: pcl_cylinder.rviz  pcl_motions.yaml  pcl_regions.rviz  pcl_segment_table.rviz  pcl_tutorial.rviz
tiago_pcl_tutorial/include/tiago_pcl_tutorial/: geometry.h  pcl_filters.hpp  tf_transforms.hpp
tiago_pcl_tutorial/launch/: cylinder_detector.launch  main_plane_detector.launch  pcl_region.launch  pcl_segment.launch  segment_table.launch
tiago_pcl_tutorial/msg/: PlaneCoefficients.msg
tiago_pcl_tutorial/resources/: sliders.ui
tiago_pcl_tutorial/src/: geometry.cpp  pcl_filters.cpp  segment_table.cpp  tf_transforms.cpp
tiago_pcl_tutorial/src/nodes/: cylinder_detector.cpp  detect_main_plane.cpp  pcl_segment.cpp  region_segment.cpp
tiago_pick_demo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_pick_demo/action/: PickUpPose.action
tiago_pick_demo/cfg/: SphericalGrasp.cfg
tiago_pick_demo/config/: pick_and_place_params.yaml  pick_and_place_params_steel.yaml  pick_and_place_params_titanium.yaml  pick_motions.yaml  pregrasp_motion.yaml
tiago_pick_demo/config/rviz/: tiago_pick_demo.rviz
tiago_pick_demo/launch/: pick_demo.launch  pick_simulation.launch
tiago_pick_demo/scripts/: pick_and_place_server.py  pick_client.py  spherical_grasps_server.py
tiago_trajectory_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_trajectory_controller/src/: run_traj_control.cpp
tts/: CHANGELOG.rst  CMakeLists.txt  ReadMe.md  package.xml
tts/launch/: launch_tts.launch  tts.launch
tts/resources/: text_gui.ui
tts/scripts/: tts_client.py  tts_client_gui.py  tts_client_terminal.py  tts_to_soundplay.py
