<?xml version="1.0"?>
<package>
  <name>demo_motions</name>
  <version>0.0.0</version>
  <description>The demo_motions package</description>

  <maintainer email="job.1994@gmail.com">Job van Dieten</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>roslib</run_depend>

</package>