<?xml version="1.0"?>
<package>
  <name>demo_motions</name>
  <version>2.0.3</version>
  <description>This code runs several motions designed to show the mobility and use of the arm of the TIAGo robot</description>

  <author email="job.1994@gmail.com">Job van Dieten</author>
  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>

  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>roslib</run_depend>

</package>
