<?xml version="1.0"?>
<package>
  <name>look_hand</name>
  <version>2.0.3</version>
  <description>Example on how to command the head of the robot so that it looks at its hand. It shows how to use point_head_action and TF in order to retrieve the position of the hand</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sam Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
