<?xml version="1.0"?>
<package>
  <name>play_with_sensors</name>
  <version>2.0.3</version>
  <description>The play_with_sensors package contains little examples on using
    sensor data of the robot</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>python-qt-bindings</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
