<?xml version="1.0"?>
<package format="3">
  <name>play_with_sensors</name>
  <version>2.0.4</version>
  <description>The play_with_sensors package contains little examples on using
    sensor data of the robot</description>

  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-qt-bindings</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-qt5-bindings</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
