<?xml version="1.0"?>
<package>
  <name>run_motion</name>
  <version>1.0.0</version>
  <description>Example of C++ and Python action clients to request a motion to /play_motion action server</description>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
