<?xml version="1.0"?>
<package>
  <name>run_motion</name>
  <version>2.0.1</version>
  <description>Example of C++ and Python action clients to request a motion to /play_motion action server</description>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="sam.pfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
