<?xml version="1.0"?>
<package>
  <name>tiago_joint_controller</name>
  <version>1.0.0</version>
  <description>Example to controll tiago joints of head, hand, arm and torso.</description>

  <maintainer email="derzuomaia@gmail.com">Derzu Omaia</maintainer>

  <license>free</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
