<?xml version="1.0"?>
<package>
  <name>tiago_moveit_tutorial</name>
  <version>2.0.3</version>
  <description>MoveIt! tutorials for TIAGo robot</description>

  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
