<?xml version="1.0"?>
<package>
  <name>tiago_opencv_tutorial</name>
  <version>2.0.3</version>
  <description>This package contains a set of tutorials for using the OpenCV library, the tutorials include sharpening of images, keypoint detection and FLANN matching</description>

  <author email="job.1994@gmail.com">Job van Dieten</author>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>image_transport_plugins</run_depend>
</package>
