<?xml version="1.0"?>
<package>
  <name>tiago_pcl_tutorial</name>
  <version>2.0.3</version>
  <description>Tutorial showing basic point cloud processing including different types of filtering and segmentation algorithms</description>

  <maintainer email="tiago-support@pal-robotics.com">TIAGo support team</maintainer>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
