<?xml version="1.0"?>
<package>
  <name>tiago_pick_demo</name>
  <version>2.0.3</version>
  <description>Example of TIAGo picking an object with an ArUco marker placed on top of a table</description>

  <author email="sammy.pfeiffer@pal-robotics.com">Sammy Pfeiffer</author>
  <author email="job.1994@gmail.com">Job Van Dieten</author>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>

  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>aruco_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>aruco_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

</package>
