<?xml version="1.0"?>
<package>
  <name>tiago_trajectory_controller</name>
  <version>2.0.2</version>
  <description>Example on how to use the trajectory controller to make the robot reach some given waypoints</description>

  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
